--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,19 @@
 {
   "name": "vamoperu",
   "app_id": "",
-  "type": "ionic1"
+  "type": "ionic1",
+  "gulpStartupTasks": [
+    "sass",
+    "watch"
+  ],
+  "integrations": {
+    "gulp": {},
+    "cordova": {}
+  },
+  "watchPatterns": [
+    "scss/**/*",
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
+  ]
 }
